Bug 137311 - About dialog: logo is blurred in gtk3
Summary: About dialog: logo is blurred in gtk3
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
7.1.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.1.0
Keywords: bibisected, bisected, regression
: 137354 (view as bug list)
Depends on:
Blocks:
 
Reported: 2020-10-07 11:53 UTC by Xisco Faulí
Modified: 2020-12-21 14:43 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Before VS after ( LibreOffice 7.1 master ) (224.47 KB, image/png)
2020-10-07 11:53 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2020-10-07 11:53:02 UTC
Created attachment 166153 [details]
Before VS after ( LibreOffice 7.1 master )

See comparison image

Reproduced in

Version: 7.1.0.0.alpha0+
Build ID: 19a0fbf456129e011cb9ab9ab6ab730cba274bbd
CPU threads: 4; OS: Linux 5.7; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 1 Xisco Faulí 2020-10-07 11:54:07 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=6b709ad5d46dc33f29ec28183cea40cf9e77e2af

author	Luboš Luňák <l.lunak@collabora.com>	2020-09-29 09:42:14 +0200
committer	Luboš Luňák <l.lunak@collabora.com>	2020-09-30 11:38:37 +0200
commit 6b709ad5d46dc33f29ec28183cea40cf9e77e2af (patch)
tree 5d43b248f42543c88862a84c5283969dc63e3f59
parent 09c24681a3414092fde50ec0f617c9f7c79e8a61 (diff)
fix DrawDeviceAlphaBitmap() with mirroring (tdf#136223)

Bisected with: bibisect-linux64-7.1

Adding Cc: to Luboš Luňák
Comment 2 Commit Notification 2020-10-12 13:54:52 UTC
Luboš Luňák committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/0fa9920391ed3bb6aa6ef0f5220050f2c694f859

don't disable the fast path in DrawDeviceAlphaBitmap() (tdf#137311)

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Xisco Faulí 2020-10-30 11:10:08 UTC
Verified in

Version: 7.1.0.0.alpha1+
Build ID: ec1f4d3253963ac16d638734ac70dde033e82154
CPU threads: 4; OS: Linux 5.7; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

@Luboš Luňák, thanks for fixing this issue!!
Comment 4 Xisco Faulí 2020-11-02 10:08:27 UTC
*** Bug 137354 has been marked as a duplicate of this bug. ***